<resources>
    <string name="app_name">ScoreKeeper</string>
    <string name="one_point">+1 Point</string>
    <string name="two_points">+2 Points</string>
    <string name="tree_points">+3 Points</string>
    <string name="view_history">View History</string>
    <string name="undo_point">Undo</string>
    <string name="reset_score">Reset</string>
    <string name="score">0</string>
    <string name="teamAName">Team A</string>
    <string name="teamBName">Team B</string>
    <string name="game_history_dialog_title">Game History</string>
    <string name="reset_score_dialog_title">Reset Score</string>
    <string name="reset_score_dialog_message">Are you sure?</string>
    <string name="team_name_dialog_textEdit_hint">Team Name</string>
    <string name="teamA_name_dialog_title">Name for Team A</string>
    <string name="teamB_name_dialog_title">Name for Team B</string>
</resources>
