<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:text="@string/teamAName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teamAName"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.57"
        android:textSize="24sp"
        android:onClick="changeTeamAName"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5078125"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="209dp" />

    <TextView
        android:text="@string/teamBName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teamBName"
        android:textSize="24sp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.43"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:onClick="changeTeamBName"/>

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/plus3PointA"
        tools:text="@string/tree_points"
        android:text="@string/tree_points"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/plus2PointA"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="add3PointsA"/>

    <Button
        android:text="@string/two_points"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/plus2PointA"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/plus1PointA"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="add2PointsA"/>

    <Button
        android:text="@string/one_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/plus1PointA"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/undoButton"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="add1PointsA"/>

    <Button
        android:text="@string/tree_points"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/plus3PointB"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.43"
        app:layout_constraintBottom_toTopOf="@+id/plus2PointB"
        android:layout_marginBottom="16dp"
        android:onClick="add3PointsB"/>

    <Button
        android:text="@string/two_points"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/plus2PointB"
        app:layout_constraintBottom_toTopOf="@+id/plus1PointB"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="add2PointsB"/>

    <Button
        android:text="@string/one_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/plus1PointB"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="add1PointsB"/>

    <Button
        android:text="@string/view_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/historyButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/undoButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintRight_toLeftOf="@+id/resetButton"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:onClick="showHistory"
        style="@style/Widget.AppCompat.Button" />

    <Button
        android:text="@string/undo_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/undoButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:onClick="undoScore"/>

    <Button
        android:text="@string/reset_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/resetButton"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:onClick="resetScore"/>

    <TextView
        android:text="@string/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scoreTeamA"
        android:textSize="90sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/teamAName"
        app:layout_constraintBottom_toTopOf="@+id/plus3PointA"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp" />

    <TextView
        android:text="@string/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scoreTeamB"
        android:textSize="90sp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/teamBName"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/plus3PointB"
        android:layout_marginBottom="8dp" />



</android.support.constraint.ConstraintLayout>